Add figures task4.1

--- a/code/task_4.1.ipynb
+++ b/code/task_4.1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "from rbm import RestrictedBoltzmannMachine\n",
     "from util import *\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "title_font = {'fontname':'Arial', 'size':'14', 'color':'black', 'weight':'bold', 'family':'monospace'}\n"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,34 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Learning CD1\n",
-      "Iteration = 0: recon_loss = 0.0164\n",
-      "Iteration = 1: recon_loss = 0.0153\n",
-      "Iteration = 2: recon_loss = 0.0146\n",
-      "Iteration = 3: recon_loss = 0.0140\n",
-      "Iteration = 4: recon_loss = 0.0136\n",
-      "Iteration = 5: recon_loss = 0.0134\n",
-      "Iteration = 6: recon_loss = 0.0132\n",
-      "Iteration = 7: recon_loss = 0.0130\n",
-      "Iteration = 8: recon_loss = 0.0128\n",
-      "Iteration = 9: recon_loss = 0.0127\n",
-      "Iteration = 10: recon_loss = 0.0125\n",
-      "Iteration = 11: recon_loss = 0.0125\n",
-      "Iteration = 12: recon_loss = 0.0124\n",
-      "Iteration = 13: recon_loss = 0.0123\n",
-      "Iteration = 14: recon_loss = 0.0123\n",
-      "Iteration = 15: recon_loss = 0.0122\n",
-      "Iteration = 16: recon_loss = 0.0122\n",
-      "Iteration = 17: recon_loss = 0.0121\n",
-      "Iteration = 18: recon_loss = 0.0121\n",
-      "Iteration = 19: recon_loss = 0.0121\n"
+      "Learning CD1\n"
      ]
     }
    ],
@@ -109,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +115,15 @@
     "plt.ylabel('Update norm')\n",
     "plt.xticks(range(0, n_iterations))\n",
     "plt.xlim(0,n_iterations-1)\n",
-    "plt.title(\"$\\Delta \\omega_{vh}$ norm over iterations\")\n",
+    "plt.title(\"$\\Delta \\omega_{vh}$ norm over iterations\", title_font)\n",
+    "plt.tight_layout()\n",
     "plt.savefig('figures/norm_delta_vh_iterations.pdf', dpi=1000.0)\n",
     "plt.show()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -167,14 +149,15 @@
     "plt.ylabel('Update norm')\n",
     "plt.xticks(range(0, n_iterations))\n",
     "plt.xlim(0,n_iterations-1)\n",
-    "plt.title(\"Biases norm over iterations\")\n",
+    "plt.title(\"Biases norm over iterations\", title_font)\n",
+    "plt.tight_layout()\n",
     "plt.savefig('figures/norm_bias_iterations.pdf', dpi=1000.0)\n",
     "plt.show()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,14 +317,15 @@
     "plt.ylabel('Reconstruction loss')\n",
     "plt.xticks(range(0, n_iterations))\n",
     "plt.xlim(0,n_iterations-1)\n",
-    "plt.title(\"Average reconstruction loss\")\n",
+    "plt.title(\"Average reconstruction loss\", title_font)\n",
+    "plt.tight_layout()\n",
     "plt.savefig('figures/comparison_units_epochs.pdf', dpi=1000.0)\n",
     "plt.show()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
